force-app/main/default/objects/Facility__c/Facility__c.object-meta.xml
<CustomObject>
    <label>Facility</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Facility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>