force-app/main/default/objects/Facility__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>IF( Unavailability_Start_Date__c &lt;= TODAY() &amp;&amp; Unavailability_End_Date__c &gt;=TODAY(), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>