force-app/main/default/objects/Facility__c/fields/Number_of_beds__c.field-meta.xml
<CustomField>
    <fullName>Number_of_beds__c</fullName>
    <label>Number of beds</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>