force-app/main/default/objects/Facility__c/fields/Unavailability_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Unavailability_End_Date__c</fullName>
    <label>Unavailability End Date</label>
    <type>Date</type>
</CustomField>