force-app/main/default/objects/Facility__c/fields/Unavailability_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Unavailability_Start_Date__c</fullName>
    <label>Unavailability Start Date</label>
    <type>Date</type>
</CustomField>